lab-2/#grammar-part-a#
start -> list eof
list -> assignment ; list
	| expr ; list 
	| empty

assignment -> id = expr

expr -> term moreterms


moreterms -> + term { print('+') } moreterms
       | - term { print('-') } moreterms
       | empty

term -> factor morefactors

morefactors -> * factor { print('*') } morefactors
       | / factor { print('/') } morefactors
       | div factor { print('DIV') } morefactors
       | mod factor { print('MOD') } morefactors
       | empty

factor -> exponent
       | moreexponents

exponents ->  '(' expr ')'
	  | 

moreexponents -> 
